# boom-healpix

./: Cargo.toml  Dockerfile  README.md  docker-compose.sharded.yaml  docker-compose.yaml  plot.py  results_100000.json  results_1000000.json  results_2000000.json  results_500000.json
.github/workflows/: benchmark.yaml
src/: main.rs  sharded_cluster.rs  sharding_demo.rs
