[package]
name = "boom-healpix"
version = "0.1.0"
edition = "2021"
description = "Benchmark: HEALPix integer range queries vs MongoDB 2dsphere for astronomical cone searches"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "sharding-demo"
path = "src/sharding_demo.rs"

[[bin]]
name = "sharded-cluster"
path = "src/sharded_cluster.rs"

[dependencies]
mongodb = "3.3"
tokio = { version = "1", features = ["full"] }
cdshealpix = "0.7"
rand = "0.9"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
